# hiluxos

./: README.md
arduino/src/: ILI9341_driver.cpp  ILI9341_driver.h  main.cpp  pin_defs.h
nano/src/: ILI9341_driver.cpp  font8x8_basic.h  utility.cpp  utility.h
pio_teensy/src/: main.cpp
reset/: reset.py
reset/src/: main.cpp
src/: ILI9341_driver.cpp  ILI9341_driver.h  main.cpp
teensy/: CMakeLists.txt  blink.s  clocks.cpp  clocks.h  debug.cpp  debug.h  debug_led.c  debug_led.h  handlers.s  interrupt_timer.cpp  interrupt_timer.h  layout.ld  main.c  main.cpp  mk  nvic.cpp  nvic.h  pin_control.c  pin_control.cpp  pin_control.h  printf.cpp  printf.h  rtc.cpp  rtc.h  service.cpp  service.h  spi.cpp  spi.h  startup.s  uart.c  uart.cpp  uart.h
